test/yaml.txt
22:38:07
daviddoolin@David-Doolins-MacBook-Pro:~/src/patentprocessor/test
(git:master+:b0eae97)  ruby-1.9.3-p125@patent
$ python
Python 2.6.1 (r261:67515, Jun 24 2010, 21:47:49)
[GCC 4.2.1 (Apple Inc. build 5646)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pattern = r"ipg\d{6}.xml"
>>> import re
>>> cre = re.compile(pattern)
>>> result = cre.match('ipg333333.xml')
>>> print result
<_sre.SRE_Match object at 0x1004cb850>
>>> print result.
  File "<stdin>", line 1
    print result.
                ^
SyntaxError: invalid syntax
>>> result = cre.match('ipg33335234233.xml')
>>> print result
None
>>> print result.groups
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'NoneType' object has no attribute 'groups'
>>> result = cre.match('ipg333333.xml')
>>> print result.groups
<built-in method groups of _sre.SRE_Match object at 0x1004cb850>
>>> print result.group(1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: no such group
>>> print result.group(0)
ipg333333.xml
>>> print len(result.group)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: object of type 'builtin_function_or_method' has no len()
>>> print result.group.size
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'builtin_function_or_method' object has no attribute
'size'
>>> print result.groups.size
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'builtin_function_or_method' object has no attribute
'size'
>>> print result.group()
ipg333333.xml
>>>
